Fix title alignment.

--- a/app/assets/stylesheets/wedding_party.css.scss
+++ b/app/assets/stylesheets/wedding_party.css.scss
@@ -1,3 +1,6 @@
+h1.bridal-party-title {
+  text-align: center;
+}
 div.wedding-party {
   margin: 15px 0 15px 0;
   img {
